--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -128,13 +128,12 @@ import { ClientRouter } from "astro:transitions";
               () => {
                 location.reload();
               },
-              { once: true },
+              { once: true }
             );
             location.reload();
           }
         }
       } catch (_e) {}
-
     </script>
   </head>
   <body class="noise">
