--- a/src/pages/games.astro
+++ b/src/pages/games.astro
@@ -5,7 +5,7 @@ import PlusCircle from "lucide-astro/PlusCircle";
 import Search from "lucide-astro/Search";
 import AssetCard from "@/components/AssetCard.astro";
 import Layout from "@/layouts/Main.astro";
-import { parseAssetCookie, type Asset } from "@/lib/assets.ts";
+import { type Asset, parseAssetCookie } from "@/lib/assets.ts";
 
 export const prerender = false;
 
